--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -17,6 +17,9 @@
     <!-- https://devblogs.microsoft.com/dotnet/enable-repeatable-package-restores-using-a-lock-file/ -->
     <!-- enable project package lockfiles to mitigate non-deterministic behaviour introduced by floating versions -->
     <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+
+    <!-- enable locked restore mode in CI -->
+    <RestoreLockedMode Condition="'$(CI)' == 'true'">true</RestoreLockedMode>
   </PropertyGroup>
 
   <!-- Development dependencies -->
