--- a/AsmRefPatcher.Cli/AsmRefPatcher.Cli.csproj
+++ b/AsmRefPatcher.Cli/AsmRefPatcher.Cli.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <PackageReference Include="ConsoleAppFramework" />
+  </PropertyGroup>
+
 </Project>
