--- a/AsmRefPatcher.Cli/AsmRefPatcher.Cli.csproj
+++ b/AsmRefPatcher.Cli/AsmRefPatcher.Cli.csproj
@@ -5,8 +5,8 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
-  <PropertyGroup>
+  <ItemGroup>
     <PackageReference Include="ConsoleAppFramework" />
-  </PropertyGroup>
+  </ItemGroup>
 
 </Project>
