--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -32,7 +32,17 @@
 
   <!-- Runtime dependencies -->
   <ItemGroup>
+    <PackageVersion Include="Mono.Cecil" Version="[0.11.*, 0.12.0)" />
+    <PackageVersion Include="Serilog" Version="[4.*, 5.0.0)" />
+    <PackageVersion Include="System.Reflection.Metadata" Version="[9.*, 10.0.0)" />
+  </ItemGroup>
 
+  <!-- Transitive dependency pins -->
+  <ItemGroup>
+    <PackageVersion Include="System.Diagnostics.DiagnosticSource" Version="[9.*, 10.0.0)" />
+    <PackageVersion Include="System.Threading.Channels" Version="[9.*, 10.0.0)" />
+    <PackageVersion Include="System.Memory" Version="[4.*, 5.0.0)" />
+    <PackageVersion Include="System.Runtime.CompilerServices.Unsafe" Version="[6.*, 7.0.0)" />
   </ItemGroup>
 
 </Project>
